Day 2/Lab2/Parser/LexerGenerator/Exercise2.g4
grammar Exercise2;

@lexer::header {
from lexererr import *
}

@lexer::members {
def emit(self):
    tk = self.type
    result = super().emit()
    if tk == self.UNCLOSE_STRING:       
        raise UncloseString(result.text)
    elif tk == self.ILLEGAL_ESCAPE:
        raise IllegalEscape(result.text)
    elif tk == self.ERROR_CHAR:
        raise ErrorToken(result.text)
    elif tk == self.UNTERMINATED_COMMENT:
        raise UnterminatedComment()
    else:
        return result;
}

options{
	language=Python3;
}

program 
    : ( expression )* EOF
    ;

expression
    : expression '+' term
    | expression '-' term
    | term
    ;

term 
    : term '*' factor
    | term '/' factor
    | factor
    ;

factor
    : Integer
    | Id
    ;

Integer: [0-9]+ ;
Id: [a-z]+ ;

WS : [ \t\r\n]+ -> skip; // skip spaces, tabs, newlines

ERROR_CHAR: .;
UNCLOSE_STRING: .;
ILLEGAL_ESCAPE: .;
UNTERMINATED_COMMENT: .;
